fix for close button being under vertical scrollbar

--- a/src-built-in/components/assets/css/_windowTitleBar.css
+++ b/src-built-in/components/assets/css/_windowTitleBar.css
@@ -21,7 +21,7 @@
     flex-direction: row;
     justify-content: center;
     background: var(--window-header-background-color);
-    width: 100vw;
+    width: 100%;
     left: 0;
     z-index: 2147483641;
     top: 0;
